--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,33 @@
-ultralytics
-opencv-contrib-python
-scikit-learn
-matplotlib
-torch
-numpy
-albumentations
-pandas
-seaborn
-kornia
-xgboost
-joblib
-grad-cam
+# Deep Learning Frameworks
+torch>=2.0.0
+torchvision>=0.15.0
+ultralytics>=8.0.0
+
+# Computer Vision
+opencv-contrib-python>=4.8.0
+kornia>=0.7.0
+albumentations>=1.3.0
+
+# Explainability
+grad-cam>=1.4.8
+
+# Machine Learning
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+
+# Data Processing
+numpy>=1.24.0
+pandas>=2.0.0
+
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Model Persistence
+joblib>=1.3.0
+
+# Additional Dependencies
+Pillow>=10.0.0
+pyyaml>=6.0
+tqdm>=4.65.0
+scipy>=1.11.0
